docs/7.57/md/abapselection-screen_incl_shortref.md
---
title: "SELECTION-SCREEN INCLUDE - Short Reference"
description: |
  Reference(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapselection-screen_include.htm) Syntax SELECTION-SCREEN INCLUDE   PARAMETERS parameter OBLIGATORY OFF MODIF ID modid    SELECT-OPTIONS selcrit OBLIGATORY OFF NO INTERVA
version: "7.57"
category: "ui"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapselection-screen_incl_shortref.htm"
abapFile: "abapselection-screen_incl_shortref.htm"
keywords: ["select", "do", "if", "try", "data", "abapselection", "screen", "incl", "shortref"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [ABAP - Short Reference](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_shortref.htm) →  S

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: SELECTION-SCREEN INCLUDE, ABAPSELECTION-SCREEN_INCL_SHORTREF, 757%0D%0A%0D%0AError:%0
D%0A%0D%0A%0D%0A%0D%0ASuggestion for improvement:)

SELECTION-SCREEN INCLUDE - Short Reference

[Reference](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapselection-screen_include.htm)

Syntax

SELECTION-SCREEN INCLUDE *{* *{* PARAMETERS parameter
                             *\[*OBLIGATORY *\[*OFF*\]**\]*
                             *\[*MODIF ID modid*\]* *}*
                         *|* *{* SELECT-OPTIONS selcrit
                             *\[*OBLIGATORY *\[*OFF*\]**\]*
                             *\[*NO INTERVALS *\[*OFF*\]**\]*
                             *\[*NO-EXTENSION *\[*OFF*\]**\]*
                             *\[*MODIF ID modid*\]* *}*
                         *|* *{* COMMENT *\[*/*\]**\[*pos*\]*(len) text
                             *\[*FOR FIELD sel*\]*
                             *\[*MODIF ID modid*\]* *}*
                         *|* *{* PUSHBUTTON *\[*/*\]**\[*pos*\]*(len) button\_text
                             *\[*USER-COMMAND fcode*\]*
                             *\[*MODIF ID modid*\]* *}*
                         *|* *{* BLOCKS block *}* *}*
                         *\[*ID id*\]*.

Effect

Inherits screen elements from a different [selection screen](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenselection_screen_glosry.htm "Glossary Entry").

Additions   

-   [PARAMETERS parameter](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapselection-screen_include_param.htm)
    Inherits the screen elements from a parameter parameter.
-   [SELECT-OPTIONS selcrit](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapselection-screen_include_selop.htm)
    Inherits the screen elements from a [selection criterion](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenselection_criterion_glosry.htm "Glossary Entry") selcrit.
-   [COMMENT *\[*/*\]**\[*pos*\]*(len) text](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapselection-screen_include_comnt.htm)
    Inherits an output field in the position specified in pos and len.
-   [PUSHBUTTON *\[*/*\]**\[*pos*\]*(len) button\_text *\[*USER-COMMAND fcode*\]*](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapselection-screen_include_pushb.htm)
    Inherits a pushbutton in the position specified in pos and len. The [function code](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenfunction_code_glosry.htm "Glossary Entry") is either inherited or specified as fcode.
-   [BLOCKS block](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapselection-screen_include_block.htm)
    Inherits a block block or a [tabstrip](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abentabstrip_control_glosry.htm "Glossary Entry") area with all its elements.
-   [*\[*OBLIGATORY *\[*OFF*\]**\]* *\[*NO INTERVALS *\[*OFF*\]**\]* *\[*MODIF ID modid*\]* *\[*FOR FIELD sel*\]*](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapselection-screen_include_selop.htm)
    Overwrites the corresponding properties of the inherited element.
-   [ID id](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapselection-screen_ldb_additions.htm)
    Defines an ID id with a maximum of three characters on a logical database for the inherited screen element.